force-app/main/default/objects/Message__e/Message__e.object-meta.xml
<CustomObject>
    <description>Platform event for the messages being sent in the Messenger application</description>
    <label>Message</label>
    <pluralLabel>Messages</pluralLabel>
</CustomObject>