force-app/main/default/objects/Message__e/fields/From_User__c.field-meta.xml
<CustomField>
    <fullName>From_User__c</fullName>
    <label>From User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>