force-app/main/default/objects/Message__e/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>The ID of the message that represents this message in the database. Required in case a user attempts to post this message in Chatter before refreshing the page. (Refreshing the page would provide the ID as all messages are pulled from the DB)</description>
    <label>Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>