force-app/main/default/objects/Message__e/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <label>ThreadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>