force-app/main/default/objects/Message__e/fields/To_User__c.field-meta.xml
<CustomField>
    <fullName>To_User__c</fullName>
    <description>The recipient or public group that this message is being sent to</description>
    <label>To User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>